--- a/wxtest/pages/index/index.wxml
+++ b/wxtest/pages/index/index.wxml
@@ -1,2 +1,6 @@
-<button bindtap="goHome">主页面</button>
-<button bindtap="selectImg">小程序API</button>
+<view class="container">
+  <button bindtap="goHome">主页面</button>
+  <button bindtap="selectImg">选择图片</button>
+  <button bindtap="goWebSocket">WebSocket</button>
+  <button bindtap="goWebSocket">1111</button>
+</view>
