--- a/wxtest/pages/index/index.wxml
+++ b/wxtest/pages/index/index.wxml
@@ -2,5 +2,5 @@
   <button bindtap="goHome">主页面</button>
   <button bindtap="selectImg">选择图片</button>
   <button bindtap="goWebSocket">WebSocket</button>
-  <button bindtap="goWebSocket">1111</button>
+  <button bindtap="goMusic">音乐</button>
 </view>
